fix layout bug

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -347,14 +347,14 @@ nav > ul li a:active {
 	
 } 
 
-.playStore {
+.appStore {
 	height: 75px;
 	margin-right: 24px;
 }
 
 @media only screen and (max-width: 992px) {
 
-	.playStore {
+	.appStore {
 		margin-right: 24px;
 		margin-bottom: 0px;
 	}
@@ -363,14 +363,14 @@ nav > ul li a:active {
 
 @media only screen and (max-width: 528px) {
 
-	.playStore {
+	.appStore {
 		margin-right: 0px;
 		margin-bottom: 24px;
 	}
 	
 } 
 
-.appStore {
+.macStore {
 	height: 75px;
 }
 
